@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2009-2013 by Walter Brisken                             *
+ *   Copyright (C) 2009-2014 by Walter Brisken                             *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -881,7 +881,7 @@ AntennaSetup::AntennaSetup(const std::string &name) : vexName(name)
 	clock3 = 0.0;
 	clock4 = 0.0;
 	clock5 = 0.0;
-	networkPort = 0;
+	networkPort = "0";
 	windowSize = 0;
 	phaseCalIntervalMHz = -1;
 	toneGuardMHz = -1.0;
